update ipython notebook version and added spark examples

--- a/scikit/first/Naive Bayes.ipynb
+++ b/scikit/first/Naive Bayes.ipynb
@@ -28,7 +28,7 @@
     }, 
     {
      "cell_type": "code", 
-     "collapsed": false, 
+     "collapsed": true, 
      "input": [
       "def loadDataSet():", 
       "    postingList=[['my', 'dog', 'has', 'flea', \\", 
@@ -53,7 +53,7 @@
     }, 
     {
      "cell_type": "code", 
-     "collapsed": false, 
+     "collapsed": true, 
      "input": [
       "def createVocabList(dataSet):", 
       "    vocabSet = set([])", 
@@ -70,7 +70,7 @@
     }, 
     {
      "cell_type": "code", 
-     "collapsed": false, 
+     "collapsed": true, 
      "input": [
       "# set-of-words: word -> (0 or 1)", 
       "def setOfWords2Vec(vocabList, inputSet):", 
@@ -152,7 +152,7 @@
     }, 
     {
      "cell_type": "code", 
-     "collapsed": false, 
+     "collapsed": true, 
      "input": [
       "def classifyNB(vec2Classify, p0Vec, p1Vec, pClass1):", 
       "    p1 = sum(vec2Classify * p1Vec) + log(pClass1)", 
@@ -194,7 +194,7 @@
     }, 
     {
      "cell_type": "code", 
-     "collapsed": false, 
+     "collapsed": true, 
      "input": [
       "# bag-of-words: word -> count", 
       "def bagOfWords2VecMN(vocabList, inputSet):", 
@@ -211,7 +211,7 @@
     }, 
     {
      "cell_type": "code", 
-     "collapsed": false, 
+     "collapsed": true, 
      "input": [
       "# Prepare", 
       "import re", 
