update scikit first

--- a/scikit/first/Collaborative Filtering.ipynb
+++ b/scikit/first/Collaborative Filtering.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "name": "Spark Naive Bayes"
+  "name": "Collaborative Filtering"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -32,38 +32,30 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from pyspark import SparkContext\n",
-      "\n",
-      "logFile = \"/home/msameh/osrc/incubator-spark/README.md\"\n",
-      "sc = SparkContext(\"local\", \"Simple PyApp\")"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "logData = sc.textFile(logFile).cache()\n",
-      "\n",
-      "numAs = logData.filter(lambda s: 'a' in s).count()\n",
-      "numBs = logData.filter(lambda s: 'b' in s).count()\n",
-      "\n",
-      "print \"Lines with a: %i, lines with0 b: %i\" % (numAs, numBs)\n"
+      "# load: http://mldata.org/repository/data/viewslug/book-crossing-ratings-10/\n",
+      "from sklearn.datasets import fetch_mldata\n",
+      "book_crossing_ratings = fetch_mldata(\"book-crossing-ratings-10\")  # fetch from the Interne. It's gonna take some time at first call\n"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stdout",
+       "output_type": "pyout",
+       "prompt_number": 12,
        "text": [
-        "Lines with a: 65, lines with0 b: 36\n"
+        "(1149780, 3)"
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 12
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
